--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/app/index.js",
-    "dev": "nodemon ./src/app/index.js",
+    "start": "node --env-file .env ./src/app/index.js",
+    "dev": "nodemon --env-file .env ./src/app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
     "mongodb": "^6.8.0",
     "nodemon": "^3.1.4"
   },
