--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file .env ./src/app/index.js",
-    "dev": "nodemon --env-file .env ./src/app/index.js",
+    "start": "node --env-file .env ./src/index.js",
+    "dev": "nodemon --env-file .env ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
